# yp_project_work_3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: rust.yml
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: handlers.rs  main.rs  server.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  password.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  mod.rs
blog-server/src/presentation/: config.rs  dto.rs  grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs
