[workspace]
resolver = "2"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nikita"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.16"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "Node", "Text"] }
js-sys = "0.3"
gloo-net = "0.6"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
