[workspace]
resolver = "2"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
module_inception = "allow"
# gloo_net types in blog-wasm are inherently not Send in single-threaded WASM
future_not_send = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nikita"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "10.3"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.9", features = ["std", "os_rng"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "query"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "Element", "HtmlElement", "Node", "Text",
    "Storage", "Headers", "Request", "RequestInit", "Response", "RequestMode"
] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo-net = "0.6"
console_error_panic_hook = "0.1"

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tower_governor = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
dirs = "6.0"
