[package]
name = "blog-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Client library
blog-client = { path = "../blog-client" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
anyhow = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
