[package]
name = "blog-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
anyhow = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anyhow", "prost", "tonic-prost"]

[lints]
workspace = true
