[package]
name = "blog-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower_governor = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[lints]
workspace = true
