[package]
name = "blog-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo-net = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Utilities
console_error_panic_hook = { workspace = true }

[lints]
workspace = true
